--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-web": "~0.19.6",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
