--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "lint": "tsc --noEmit && eslint --ext .js,.jsx,.ts,.tsx ./",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -22,7 +24,6 @@
     "react-native-screens": "^3.25.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
@@ -30,7 +31,16 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.28",
+    "@types/react-redux": "^7.1.27",
     "@types/react-test-renderer": "^18.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
   "private": true
